Bubble layout: Fix and adjust reply thread and preview spacing

--- a/res/css/views/rooms/_BubbleLayout.scss
+++ b/res/css/views/rooms/_BubbleLayout.scss
@@ -53,16 +53,6 @@ $left-gutter: 56px;
             position: absolute;
         }
 
-        .mx_ReplyThread {
-            .mx_EventTile_avatar {
-                top: 4px !important;
-            }
-
-            .mx_MessageTimestamp {
-                top: 4px !important;
-            }
-        }
-
         .mx_EventTile_line, .mx_EventTile_reply {
             padding-top: 3px;
             padding-bottom: 3px;
@@ -130,6 +120,18 @@ $left-gutter: 56px;
     .mx_EventTile:hover.mx_EventTile_unverified .mx_EventTile_line > a > .mx_MessageTimestamp,
     .mx_EventTile:hover.mx_EventTile_unknown .mx_EventTile_line > a > .mx_MessageTimestamp {
         left: 5px;
+    }
+
+    .mx_ReplyThread, .mx_ReplyPreview {
+        padding-top: 2px;
+
+        .mx_EventTile_avatar {
+            top: 4px !important;
+        }
+
+        .mx_MessageTimestamp {
+            top: 4px !important;
+        }
     }
 
     .mx_MessageActionBar {
